--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,5 +1,5 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
+# Read about fixtures at
+# http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 one:
   title: MyString
   description: MyText
@@ -14,8 +14,6 @@ two:
 
 ruby:
   title: Programming Ruby 1.9
-  description: Ruby is the fastest growing and most exciting dynamic
-  language out there. If you need to get working programs
-  delivered fast, you should add Ruby to your toolbox.
+  description: Ruby is the fastest growing and most exciting dynamic language out there. If you need to get working programs delivered fast, you should add Ruby to your toolbox.
   price: 49.50
   image_url: ruby.png
